# Neurographics

./: CNAME  index.html  main.py  pyproject.toml
Glint/: index.html
Glint/scss/: _site-base.scss
scss/: style.scss
