[tool.poetry]
name = "neurographics"
version = "0.1.0"
description = ""
authors = ["consul2022 <lysenko-vyacheslav2008@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

